# blocksnet

./: .buildinfo  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST.in  MP_indicators.ipynb  Makefile  README-EN.md  README-RU.md  README-RU.rst  README.md  README.rst  README_ru.rst  about_us.html  balancer.py  example.ipynb  examples.ipynb  examples_2.ipynb  genindex.html  giga_model.ipynb  index.html  indicators.ipynb  main.py  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  test_GLEB.ipynb
.doctrees/: about_us.doctree  environment.pickle  index.doctree
.doctrees/api/: index.doctree
.doctrees/blocksnet/: contributing.doctree  faq.doctree  index.doctree  quickstart.doctree
.doctrees/examples/: blocks_generator.doctree  city.doctree  genetic.doctree  graph_generator.doctree  index.doctree  pipeline.doctree  provision.doctree  vacant_area.doctree
.doctrees/get_started/: index.doctree
.github/workflows/: documentation.yml  main.yml  mirror_repo_to_gitlab.yml  publish_to_pypi.yml  tests.yml
Balancer/: balancer.py  example.ipynb
Blocks_getter/: blocks_getter.py  blocks_voron.ipynb
Data_getter/: get_data.py  prepare_data_to_balance.py
MP_indicators/data/: building_spb.geojson
MP_indicators/notebooks/: MP_indicators.ipynb
Provision/: Provision.ipynb  provision.py
Provision_getter/: provision_getter.py
_modules/: index.html
_sources/: about_us.md.txt  about_us.rst.txt  index.md.txt
_sources/api/: index.rst.txt
_sources/blocksnet/: contributing.md.txt  index.md.txt
_sources/examples/: city.nblink.txt  genetic.nblink.txt  graph_generator.nblink.txt  index.rst.txt  provision.nblink.txt  vacant_area.nblink.txt
_static/: documentation_options.js
api/: index.html
api/_autosummary/: blocksnet.analysis.centrality.html  blocksnet.analysis.centrality.population.core.html  blocksnet.analysis.centrality.population.html  blocksnet.analysis.centrality.population.schemas.html  blocksnet.analysis.centrality.services.core.html  blocksnet.analysis.centrality.services.html  blocksnet.analysis.html  blocksnet.analysis.indicators.density.core.html  blocksnet.analysis.indicators.density.html  blocksnet.analysis.indicators.density.schemas.html  blocksnet.analysis.indicators.development.core.html  blocksnet.analysis.indicators.development.html  blocksnet.analysis.indicators.development.schemas.html  blocksnet.analysis.indicators.html  blocksnet.analysis.morphotypes.html  blocksnet.analysis.morphotypes.schemas.html  blocksnet.analysis.morphotypes.spacematrix.html  blocksnet.analysis.morphotypes.strelka.html  blocksnet.analysis.services.collocation.core.html  blocksnet.analysis.services.collocation.html  blocksnet.analysis.services.count.core.html  blocksnet.analysis.services.count.html  blocksnet.analysis.services.count.schemas.html  blocksnet.analysis.services.density.core.html  blocksnet.analysis.services.density.html  blocksnet.analysis.services.density.schemas.html  blocksnet.analysis.services.html  blocksnet.blocks.aggregation.core.html  blocksnet.blocks.aggregation.html  blocksnet.blocks.aggregation.schemas.html  blocksnet.blocks.assignment.core.html  blocksnet.blocks.assignment.html  blocksnet.blocks.assignment.schemas.html  blocksnet.blocks.assignment.utils.html  blocksnet.blocks.html  blocksnet.blocks.postprocessing.core.html  blocksnet.blocks.postprocessing.html  blocksnet.blocks.postprocessing.schemas.html  blocksnet.enums.block_category.html  blocksnet.enums.html  (+50 more)
api/method/: accessibility.html  base_method.html  block_optimizer.html  centrality.html  connectivity.html  diversity.html  genetic.html  index.html  integration.html  land_use_prediction.html  provision.html  spacematrix.html  vacant_area.html
api/models/: city.html  index.html  land_use.html  schema.html  service_type.html
api/preprocessing/: adjacency_calculator.html  (+5 more)
balancer/: example.ipynb
blocksnet/: __init__.py  contributing.html  faq.html  index.html  quickstart.html
build_docs/: Makefile
docs/: .buildinfo  genindex.html  index.html  masterplan_tools.html  masterplan_tools.method.balancing.html  masterplan_tools.method.blocks.html  masterplan_tools.method.html  masterplan_tools.method.provision.html  masterplan_tools.method.publicspace.html  masterplan_tools.models.html  masterplan_tools.preprocessing.html  masterplan_tools.utils.html  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js
examples/: 0 city model.ipynb  0 connectivity.ipynb  0 graph generator.ipynb  0 pipeline.ipynb  1 blocks_cutter.ipynb  1 blocks_generator.ipynb  1.1 blocks_splitter.ipynb  123.ipynb  2 accessibility_processor.ipynb  2 data_getter.ipynb  2 graph generator.ipynb  2 graph_generator.ipynb  3 city model initialization.ipynb  3 city.ipynb  3 city_model.ipynb  3 provision.ipynb  3a city_model lp_provision.ipynb  3a city_model provision.ipynb  3b city_model iterative_provision.ipynb  3c city_model balancer.ipynb  3d city_model genetic.ipynb  4 city model methods.ipynb  4 city_model vacant_area.ipynb  4 provision.ipynb  5 publicl_space.ipynb  5 vacant_area.ipynb  6 central_place.ipynb  6 city_model central_place.ipynb  Free_area.ipynb  additional-requirements.txt  balancer.ipynb  block_optimizer.ipynb  blocks.geojson  blocks_cutter.ipynb  blocks_generator.html  blocks_generator.ipynb  cgt_graph.ipynb  city.html  city.ipynb  data validation.ipynb  (+60 more)
free_area/: Free_area.ipynb
get_blocks/: blocks_getter.py  blocks_voron.ipynb  get_blocks.py  pts.pkl
get_started/: index.html
masterplan_tools/: __init__.py
output_data/: SERVICES_LINKED_TO_BLOCKS.parquet  greens.parquet  parkings.parquet  services.parquet
placement_public_space/: example.ipynb  network_model.py
tests/: _test_4_methods.py  test_1_blocks.py  test_2_graph.py  test_3_city.py  test_4_methods.py  test_balancer.py  test_blocks.py  test_city_model.py  test_genetic.py  test_main.py  test_preprocessing.py
townsnet/: __init__.py  base_schema.py  voronizer.py
(+1427 files in other folders)
