[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blocksnet"
version = "0.0.10"
authors = [
    # { name = "", email = "" }, # TODO add authors
]
description = "Package provides methods of master plan requirements automated generation for urban areas"
readme = "README.rst"
requires-python = ">=3.10"
license = { file = "LICENCE.md" }

dependencies = [
    "geopandas>=0.13.0,<1.0.0",
    "loguru>=0.7.0,<1.0.0",
    "matplotlib==3.7.1",
    "networkit>=11.0,<12.0",
    "networkx>=3.1,<4.0",
    "numpy==1.23.5",
    "osmnx>=1.6.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "pandera==0.20.2",
    "PuLP==2.7.0",
    "pyarrow==12.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "scikit-learn==1.2.2",
    "scipy>=1.10.1,<2.0.0",
    "shapely==2.0.1",
    "tqdm>=4.65.0,<5.0.0",
    "voronoi-diagram-for-polygons==0.1.6",
    "momepy==0.7.0",
    "iduedu==0.1.2",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[tool.setuptools.packages.find]
include = ["blocksnet*"]


[project.optional-dependencies]
dev = [
    "black[jupyter]>=22",
    "mapclassify==2.6.1",       #jupyter maps
    "folium==0.14.0",           #jupyter maps
    "matplotlib-inline==0.1.6", #jupyter plots
    "ipykernel",
    "jupyter",
    "ipywidgets",
    "isort>=5.6",
    "pylint>=2.17",
    "pre-commit>=3.1",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "build",
    "twine"
]
docs = [
    "docutils>=0.18.1,<0.19",
    "sphinx==6.2.1",
    "sphinx-book-theme==1.0.1",
    "nbsphinx==0.9.3",
    "nbsphinx-link==1.3.0",
    "numpydoc==1.5.0",
    "autodocsumm==0.2.12",
    "myst_parser>=3.0.0,<4.0.0",
    "sphinx_rtd_theme>=1.2.0,<2.0.0",
    "pandoc>=2.0.0,<3.0.0",
]


[project.urls]
"Repository" = "https://github.com/aimclub/blocksnet"
"Bug Tracker" = "https://github.com/aimclub/blocksnet/issues"


[tool.black]
line-length = 120
target-version = ['py310']

[tool.pylint.format]
max-line-length = 120
expected-line-ending-format = "LF"

[tool.pylint.main]
extension-pkg-allow-list = ["pydantic"]

[tool.pycodestyle]
max-line-length = 120


[tool.isort]
lines_after_imports = 2
multi_line_output = 3
line_length = 120
include_trailing_comma = true
