[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "townsnet"
version = "0.0.9"
authors = [
    { name = "Vasilii Starikov", email = "vasilstar97@gmail.com" }, # TODO add authors
]
description = "Provision assessment for cities of an urban region"
readme = "README.rst"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    "idu_clients@git+https://github.com/vasilstar97/idu-clients.git@develop",
    "geopandas>=0.13.0,<1.0.0",
    "pandas>=1.5.3,<3.0.0",
    "numpy>=1.23.5,<2.0.0",
    "loguru>=0.7.0,<1.0.0",
    "osmnx>=1.6.0,<2.0.0",
    "PuLP==2.7.0",
    "pyarrow==12.0.0",
    "pydantic",
    "shapely",
    "tqdm>=4.65.0,<5.0.0",
    "pandera",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[tool.setuptools.packages.find]
include = ["townsnet*"]


[project.optional-dependencies]
dev = [
    "black[jupyter]>=22",
    "mapclassify==2.6.1",       #jupyter maps
    "folium==0.14.0",           #jupyter maps
    "matplotlib",
    "matplotlib-inline==0.1.6", #jupyter plots
    "ipykernel",
    "jupyter",
    "ipywidgets",
    "isort>=5.6",
    "pylint>=2.17",
    "pre-commit>=3.1",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "build",
    "twine",
]

[project.urls]
"Repository" = "https://github.com/vasilstar97/townsnet"
"Bug Tracker" = "https://github.com/vasilstar97/townsnet/issues"


[tool.black]
line-length = 120
target-version = ['py310']

[tool.pylint.format]
max-line-length = 120
expected-line-ending-format = "LF"

[tool.pylint.main]
extension-pkg-allow-list = ["pydantic"]

[tool.pycodestyle]
max-line-length = 120


[tool.isort]
lines_after_imports = 2
multi_line_output = 3
line_length = 120
include_trailing_comma = true
