[build-system]
requires = ["setuptools>=64.0", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blocksnet"
dynamic = ["version"]
authors = [
    # { name = "", email = "" }, # TODO add authors
]
description = "Package provides methods to autimatically generate master plan requirements for urban areas"
readme = "README.rst"
requires-python = ">=3.10"
license = { file = "LICENCE" }

dependencies = [
    "numpy>=2.0.0,<3.0.0",
    "pandas>=2.2.2,<3.0.0",
    "geopandas>=1.0.0,<2.0.0",
    "shapely>=2.0.6,<3.0.0",
    "loguru>=0.7.0,<1.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "pyarrow>=19.0.0,<20.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pandera==0.20.2",
    "scikit-learn>=1.4.2,<2.0.0",
    "scipy>=1.10.1,<2.0.0",
    "PuLP==2.7.0",
    "pymoo>=0.6.0,<1.0.0",
    "networkx>=3.1,<4.0",
    "osmnx>=2.0.0,<3.0.0",
    "iduedu==0.4.1",
    "optuna==4.1.0",

]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[tool.setuptools.packages.find]
include = ["blocksnet*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[project.optional-dependencies]
ml = [
    "pygeoops",
    "featuretools",
    "torch",
    "torch_geometric",
    'catboost',
    'xgboost',
]
opt = ["optuna>=4.1.0,<5.0.0"]
full = ["blocksnet[ml, opt]"]

ipynb = [
    "mapclassify==2.6.1",       #jupyter maps
    "matplotlib-inline==0.1.6", #jupyter plots
    "folium==0.14.0",           #jupyter maps
    "matplotlib>=3.9.0,<4.0.0",
]

tests = ["pytest==7.4.3", "pytest-cov==4.1.0"]
docs = [
    "docutils>=0.18.1,<0.19",
    "sphinx==6.2.1",
    "sphinx-book-theme==1.0.1",
    "nbsphinx==0.9.3",
    "nbsphinx-link==1.3.0",
    "numpydoc==1.5.0",
    "autodocsumm==0.2.12",
    "myst_parser>=3.0.0,<4.0.0",
    "sphinx_rtd_theme>=1.2.0,<2.0.0",
    "pandoc>=2.0.0,<3.0.0",
]
dev = [
    "blocksnet[full,ipynb,tests,docs]",
    "black[jupyter]>=22",
    "ipykernel",
    "jupyter",
    "ipywidgets",
    "isort>=5.6",
    "pylint>=2.17",
    "pre-commit>=3.1",
    "build",
    "twine",
]


[project.urls]
"Repository" = "https://github.com/aimclub/blocksnet"
"Bug Tracker" = "https://github.com/aimclub/blocksnet/issues"


[tool.black]
line-length = 120
target-version = ['py310']

[tool.pylint.format]
max-line-length = 120
expected-line-ending-format = "LF"

[tool.pylint.main]
extension-pkg-allow-list = ["pydantic"]

[tool.pycodestyle]
max-line-length = 120


[tool.isort]
lines_after_imports = 2
multi_line_output = 3
line_length = 120
include_trailing_comma = true
